[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfprotostash"
version = "0.1.1"
description = "Pre-generated Salesforce Pub/Sub API gRPC stubs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio",
    "protobuf",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sfprotostash"]
