[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfprotostash"
version = "0.1.2"
description = "Pre-generated Salesforce Pub/Sub API gRPC stubs + all related pip libraries that you need"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio",
    "protobuf",
    "requests",
    "avro"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sfprotostash"]
